refactor: minor java21 refactoring using IDEA suggestions for softclip and splitread packages